added info slide

--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
 
 
 
+<section>
+    <p>
+        contributed talk given on XX Discussions in Structural Molecular Biology, Nové Hrady, Czechia
+    </p>
+    <p>
+        Created using <a href="https://revealjs.com" target="_blank">Reveal.js</a>.
+    </p>
+    <p style="margin-top: 2em">
+        Use the right arrow to start browsing the slides.
+    </p>
+</section>
+
+
 <section style="text-align: left">
     <h2 style="margin-top:1em;">
         Three epochs of nascent protein translocation through the ribosome exit tunnel
